curd files added

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,141 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  height: 100% !important;
+  background-color: #fff;
+}
+* {
+  box-sizing: inherit;
+}
+.App .box {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 15px;
+  padding: 0 15px;
+  flex-wrap: wrap;
+}
+.App .box .singlePhone {
+  box-shadow: 2px 2px 10px 5px #ccc;
+  border-radius: 5px;
+  width: 19%;
+  transition: 0.5s all ease-in-out;
+  overflow: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App .box .singlePhone:hover {
+  transition: 0.5s all ease-in-out;
+  transform: translateY(-10px);
+}
+.App .box .singlePhone img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px 10px 0 0;
+  margin-bottom: 10px;
+  transition: all ease-in-out 0.5s;
+
+}
+.App .box .singlePhone:hover img {
+  transform: scale(1.05);
+}
+.App .box .singlePhone .content h2 {
+  color: #318672;
+  text-align: center;
+  font-size: 20px;
+}
+.App .box .singlePhone .content h4 {
+  color: #000;
+  text-align: center;
+  font-size: 26px;
+  margin:10px;
+}
+.App .box .singlePhone .content h4 span {
+  color: red;
+  font-size: 18px;
+  font-weight: 500;
+  padding-right: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.themeBtn {
+  display: inline-flex;
+  background-color: transparent;
+  padding: 9px 14px;
+  color: #10362d;
+  font-weight: 500;
+  font-size: clamp(12px, 0.72916vw, 14px);
+  text-decoration: none;
+  position: relative;
+  align-items: center;
+  overflow: hidden;
+  transition: all 0.5s ease-in-out;
+  z-index: 1;
+  border-radius: 10px;
+  border:1px solid #10362d;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+.themeBtn::before {
+  content: '';
+    position: absolute;
+    width: 40px;
+    height: 100%;
+    background-color: #433266;
+    top: 22px;
+    left: -22px;
+    transition: all 0.5s ease-in-out;
+    border-radius: 0;
+    z-index: -1;
+    transform: rotate(45deg);
+}
+.themeBtn:hover::before {
+  border-radius: 0;
+  opacity: 1;
+  transform: scale(7) rotate(45deg);
+  top: 0;
+  left: 0;
+}
+.themeBtn:hover {
+  color: #EFBA00;
+  transition: all 0.5s ease-in-out;
+}
+.footer {
+  background-color: #433266;
+  padding: 10px;
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+}
+.footer p {
+  color: #fff;
+  padding: 0;
+  margin: 0;
+}
+.adminLogin {
+  background-color: #433266;
+  width: 100%;
+  height: calc(100vh - 100px);
+}
+.adminLogin .box {
+  margin-top: 30%;
+  background-color: #ffffff60;
+  border-radius: 20px;
+}
+.dashBoard .leftBox {
+  background-color: #027770;
+  padding: 10px;
+  height: calc(100vh - 100px);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dashBoard .leftBox button {
+  background-color: white;
+  color: red;
+  font-weight: 500;
+  border: 1px solid transparent;
+  padding: 10px 10px;
+  border-radius: 10px;
+  margin-bottom: 6px;
+  text-align: left;
+  font-size: 16px;
 }
